--- a/hand.html
+++ b/hand.html
@@ -200,7 +200,7 @@
 										<h3><a href="product-details.html">Finger 2</a></h3>
 										<div class="product-price">
 											<span>&#8377 400.00</span><br>
-											<span>Product Code:FH2</span>
+											<span>Product Code:FH2</span><br>
 																									<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 										</div>
 									</div>
