--- a/about.html
+++ b/about.html
@@ -200,13 +200,13 @@
 								<h4 style="text-align: center; color: red;" >Founding Team</h4>
 								<div class="row">
 										<div class="col-md-4 my-3 text-center">
-						                    <img src="Images/web/f2.jpg"width="100em" height="100em"
+						                    <img src="Images/web/f2.jpeg"width="100em" height="100em"
 						                        class="bd-placeholder-img rounded-circle m-2" /><br />
 						                    <h5>Deepak Choudhary</h5>
 						                </div>
 
 						                <div class="col-md-4 my-3 text-center">
-						                    <img src="Images/Web/f.jpg" width="100em" height="100em"
+						                    <img src="Images/Web/f.jpeg" width="100em" height="100em"
 						                        class="bd-placeholder-img rounded-circle m-2" /><br />
 						                    <h5>Mayank Verma</h5>
 						                </div>
