--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
 						                </div>
 
 						                <div class="col-md-4 my-3 text-center">
-						                    <img src="Images/Web/f.jpeg" width="100em" height="100em"
+						                    <img src="Images/web/f.jpeg" width="100em" height="100em"
 						                        class="bd-placeholder-img rounded-circle m-2" /><br />
 						                    <h5>Mayank Verma</h5>
 						                </div>
