--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 														<h3><a href="">HW22 Smart Watch</a></h3>
 														<div class="product-price">
 														<span>&#8377 2100.00</span><br>
-														<span>Product Code:HW22</span>
+														<span>Product Code:HW22</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -313,7 +313,7 @@
 														<h3><a href="">W26+</a></h3>
 														<div class="product-price">
 															<span>&#8377 1700.00</span><br>
-														<span>Product Code:W26</span>
+														<span>Product Code:W26</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -333,7 +333,7 @@
 														<h3><a href="">W26+</a></h3>
 														<div class="product-price">
 															<span>&#8377 1700.00</span><br>
-														<span>Product Code:W26B</span>
+														<span>Product Code:W26B</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -364,7 +364,7 @@
 														<h3><a href="">Finger1</a></h3>
 														<div class="product-price">
 															<span>&#8377 1999.00</span><br>
-														<span>Product Code:FH1</span>
+														<span>Product Code:FH1</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -383,7 +383,7 @@
 														<h3><a href="">Finger Rock & Roll</a></h3>
 														<div class="product-price">
 															<span>&#8377 1999.00</span><br>
-														<span>Product Code:FHRR</span>
+														<span>Product Code:FHRR</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -402,7 +402,7 @@
 														<h3><a href="h">Rd Bh 202</a></h3>
 														<div class="product-price">
 															<span>&#8377 799.00</span><br>
-														<span>Product Code:BH202</span>
+														<span>Product Code:BH202</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
