Third commit for changes

--- a/blog-single-sidebar.html
+++ b/blog-single-sidebar.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Title Tag  -->
-    <title>blog_single.</title>
+    <title>blog</title>
 	<!-- Favicon -->
 	<link rel="icon" type="" href="Images/logo.png">
 	<!-- Web Font -->
@@ -132,7 +132,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="blog-single.html">Blog Single Sidebar</a></li>
 							</ul>
 						</div>
@@ -154,13 +154,13 @@
 										<img src="Images/web/watch.jpg" alt="#">
 									</div>
 									<div class="blog-detail">
-										<h2 class="blog-title">What are the secrets to start- up success?</h2>
+										<h2 class="blog-title">What are the secrets of start- up ?</h2>
 										<div class="blog-meta">
 											<span class="author"><a href="#"><i class="fa fa-user"></i>By Admin</a></span>
 										</div>
 										<div class="content">
-											<p>What a crazy time. I have five children in colleghigh school graduates.jpge or pursing post graduate studies  Each of my children attends college far from home, the closest of which is more than 800 miles away. While I miss being with my older children, I know that a college experience can be the source of great growth and experience can be the source of source of great growth and can provide them with even greater in future.</p>
-											<blockquote> <i class="fa fa-quote-left"></i> Do what you love to do and give it your very best. Whether it's business or baseball, or the theater, or any field. If you don't love what you're doing and you can't give it your best, get out of it. Life is too short. You'll be an old man before you know it. risus. Ut tincidunt, erat eget feugiat eleifend, eros magna dapibus diam.</blockquote>
+											<p>The popularity of shopping for items online is greatly increasing. If you ask me why I like to shop online, it’s because I have pretty solid control over my purchase. I get to have time to open up another tab and read up on reviews from other folks. I don’t have to be forced by sales people to just try it on and see how I like it. And 9 times out of ten, I’m shopping online because I know exactly what I want it. It’s kind of an “in and out” experience</p>
+											<blockquote> <i class="fa fa-quote-left"></i> For many of these reasons alone,e-commerce shops have to do a great job of making up for their sales people, their deals and the visual representation of their brand. Without these things, there’s really no difference between your product and another person’s product. Today, we’re going to take a look at some accessories websites that do a good job of getting people interested and buying.so we are starting our website for intracting with customers.</blockquote>
 											<!--<p>What a crazy time. I have five children in colleghigh school graduates.jpge or pursing post graduate studies  Each of my children attends college far from home, the closest of which is more than 800 miles away. While I miss being with my older children, I know that a college experience can be the source of great growth and experience can be the source of source of great growth and can provide them with even greater in future.</p>
 											<p>What a crazy time. I have five children in colleghigh school graduates.jpge or pursing post graduate studies  Each of my children attends college far from home, the closest of which is more than 800 miles away. While I miss being with my older children, I know that a college experience can be the source of great growth and experience can be the source of source of great growth and can provide them with even greater in future.</p>-->
 										</div>
