--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Title Tag  -->
-    <title>Contact_Page</title>
+    <title>Contact</title>
 	<!-- Favicon -->
 	<link rel="icon" type="" href="Images/logo.png">
 	<!-- Web Font -->
@@ -144,7 +144,7 @@
 				<div class="col-12">
 					<div class="bread-inner">
 						<ul class="bread-list">
-							<li><a href="#">Home<i class="ti-arrow-right"></i></a></li>
+							<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 							<li class="active"><a href="#">Contact</a></li>
 						</ul>
 					</div>
