--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Title Tag  -->
-    <title>faq_page.</title>
+    <title>faq</title>
     <!-- Favicon -->
     <link rel="icon" type="" href="Images/logo.png">
     <!-- Web Font -->
@@ -134,8 +134,8 @@
                     <div class="col-12">
                         <div class="bread-inner">
                             <ul class="bread-list">
-                                <li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
-                                <li class="active"><a href="#">About Us</a></li>
+                                <li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
+                                <li class="active"><a href="#">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -154,13 +154,12 @@
                                     <h2> Frequent Ask Questions?</h2>
                             </div>
                         </div>
-                        <div class="content">
+                        <div class="container">
                             <div class="section box"  >
 
                                 <h6 class="subtitle is-4 mt-2" style="color: red;">How will I know if my order has been placed successfully?</h6>
                                 <p class="content is-medium">You will get conformation call from us.</p>
-                                
-                                <h6 class="subtitle is-4 mt-2"style="color: red;">What should I do if I receive a damaged/defective/incomplete/wrong order from Accesories Zone?</h6>
+                                <h6 class="subtitle is-4 mt-2" style="color: red; text-align:">What Should I do if I receive a damaged /defective/incomplete/wrong order from Accesories Zone?</h6>
                                 <p class="content is-medium">At the time of recieving product check product completely,so if product is damaged/broken so you can refund it.</p>
                                 <h6 class="subtitle is-4 mt-2" style="color: red;">What are the shipping charges on out of indore orders?</h6>
                                 <p class="content is-medium">If you are out of indore then you have to pay 100 rupees for shipping.</p>
