--- a/shipping.html
+++ b/shipping.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Title Tag  -->
-    <title>shipping_page.</title>
+    <title>shipping</title>
     <!-- Favicon -->
     <link rel="icon" type="" href="Images/logo.png">
     <!-- Web Font -->
@@ -135,7 +135,7 @@
                     <div class="col-12">
                         <div class="bread-inner">
                             <ul class="bread-list">
-                                <li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
+                                <li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
                                 <li class="active"><a href="#">Shipping Policy</a></li>
                             </ul>
                         </div>
@@ -155,7 +155,7 @@
                                     <h2> Shipping And Return Policy</h2>
                             </div>
                         </div>
-                        <div class="content">
+                        <div class="container" style="text-align: justify;">
                             <div class="section box"  >
                                 <h4 class="subtitle is-4 " style="color: red;">Returns policy</h4>
                                 <p class="content is-medium">At present due to COVID situation we are following NO RETURNS/NO EXCHANGE.<br>
