--- a/speaker.html
+++ b/speaker.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Title Tag  -->
-    <title>Speaker_page.</title>
+    <title>Speakers</title>
 	<!-- Favicon -->
 	<link rel="icon" type="" href="Images/logo.png">
 	<!-- Web Font -->
@@ -129,7 +129,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="#">Speakers</a></li>
 							</ul>
 						</div>
@@ -161,7 +161,7 @@
 										<h3><a href="product-details.html">Landmark</a></h3>
 										<div class="product-price">
 											<span>&#8377 899.00</span><br>
-											<span>Product Code:LAN</span><br>
+											<span>Product Code:LAN1</span><br>
 											<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 										</div>
 									</div>
@@ -178,7 +178,7 @@
 										<h3><a href="product-details.html">Ajah Tcs</a></h3>
 										<div class="product-price">
 											<span>&#8377 799.00</span><br>
-											<span>Product Code:LAN</span><br>
+											<span>Product Code:AJAHT</span><br>
 											<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 										</div>
 									</div>
@@ -192,10 +192,10 @@
 										</a>
 									</div>
 									<div class="product-content">
-										<h3><a href="product-details.html">LandMark</a></h3>
+										<h3><a href="product-details.html">LandMark1</a></h3>
 										<div class="product-price">
 											<span>&#8377 499.00</span><br>
-											<span>Product Code:LAN</span><br>
+											<span>Product Code:LAN2</span><br>
 											<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 										</div>
 									</div>
