--- a/headphone.html
+++ b/headphone.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Title Tag  -->
-    <title>Headphone_page.</title>
+    <title>Headphone</title>
 	<!-- Favicon -->
 	<link rel="icon" type="" href="Images/logo.png">
 	<!-- Web Font -->
@@ -129,7 +129,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="#">Headphones</a></li>
 							</ul>
 						</div>
