--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 						<div class="text-inner">
 							<div class="row">
 								<div class="col-lg-7 col-12">
-									<div class="hero-text">
+									<div class="hero-text ">
 										<h1><span>GET EXITING OFFERS </span>Accesories For All</h1>
-										<p>Accesories Zone is the online market place where<br>product Quality is our <br> Responsiblity.</p>
+										<p style="color: white;">Accesories Zone is the online market place where<br>product Quality is our <br> Responsiblity.</p>
 										<div class="button">
 											<a href="#man" class="btn">Shop Now!</a>
 										</div>
@@ -562,7 +562,7 @@
 														<h3><a href="">Landmark  Buds</a></h3>
 														<div class="product-price">
 															<span>&#8377 1200.00</span><br>
-														<span>Product Code:LB</span>
+														<span>Product Code:LB</span><br>
 														<button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLSclSMwhmdFjsTslF0GYakClKRh7psxa2IIYFcEKb2qeS1-Npw/viewform?usp=sf_link">Buy Now</a></button>
 														</div>
 													</div>
@@ -734,9 +734,9 @@
 	
 	
 	<!-- Start Cowndown Area -->
-	<section class="cown-down">
+	<section class="cown-down container">
 		<div class="section-inner ">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-12 padding-right">
 						<div class="image">
