--- a/ophones.html
+++ b/ophones.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Title Tag  -->
-    <title>Phone_page.</title>
+    <title>Phone</title>
 	<!-- Favicon -->
 	<link rel="icon" type="" href="Images/logo.png">
 	<!-- Web Font -->
@@ -129,7 +129,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="#">Phones</a></li>
 							</ul>
 						</div>
@@ -147,9 +147,12 @@
 							<div class="col-12">
 								<div class="section-title">
 									<h2> Our Products</h2>
+									<h3>Recently Not Available</h3>
+									<h5 class="mt-5"> Thank you</h5>
 							</div>
 						</div>
-							<div class="col-lg-3 col-md-6 col-12">
+
+							<!--<div class="col-lg-3 col-md-6 col-12">
 								<div class="single-product">
 									<div class="product-img">
 										<a href="product-details.html">
@@ -309,7 +312,7 @@
 										<a href="product-details.html">
 											<img class="default-img" src="Images/phone/p10.jpg" alt="#">
 										</a>
-										<!--developed by deepak choudhary-->
+										<--developed by deepak choudhary--
 									</div>
 									<div class="product-content">
 										<h3><a href="product-details.html">Women Pant Collectons</a></h3>
@@ -577,7 +580,7 @@
 								</div>
 							</div>
 
-							
+							-->
 							</div>						
 					</div>
 				</div>
