--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
 	<!-- Map Section -->
 	<div class="map-section">
 		<div id="myMap">
-			<img src="images/map.png">
+			<img src="Images/map.png">
 		</div>
 	</div>
 	<!--/ End Map Section -->
